Add command line option to filter tests by review status